--- a/大学生自我管理APP-02/.hbuilderx/launch.json
+++ b/大学生自我管理APP-02/.hbuilderx/launch.json
@@ -4,19 +4,16 @@
     "version" : "0.0",
     "configurations" : [
         {
-        	"app-plus" : 
-        	{
-        		"launchtype" : "local"
-        	},
-        	"default" : 
-        	{
-        		"launchtype" : "local"
-        	},
-        	"h5" : 
-        	{
-        		"launchtype" : "local"
-        	},
-        	"type" : "uniCloud"
+            "app-plus" : {
+                "launchtype" : "local"
+            },
+            "default" : {
+                "launchtype" : "local"
+            },
+            "h5" : {
+                "launchtype" : "local"
+            },
+            "type" : "uniCloud"
         },
         {
             "playground" : "standard",
